HW06 batchUpdate for jdbc and tests update with roles